# BSc-Thesis-Code-Compression_analysis

./: .gitmodules  CMakeLists.txt  README.md
src/: compression_analyzer.cpp
